--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,15 @@
 			<version>2.1.3</version>
 			<scope>test</scope>
 		</dependency>
+
+
+		<!-- spring security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.7.11</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
