--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,13 @@ target/
 .sts4-cache
 
 ## other setting
+*application-prod.yml
 *application-local.yml
 *application-dev.yml
+
+/src/main/resources/application-local.yml
+/src/main/resources/application-prod.properties
+/src/main/resources/application-prod.yml
 
 ### IntelliJ IDEA ###
 .idea
