--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 spring:
   profiles:
-    active: local
+    active: prod
+  location: classpath:/application-prod.yml
+  datasource:
+      url: ${spring.datasource.url}
+      username: ${spring.datasource.username}
+      password: ${spring.datasource.password}
+      driver: ${spring.datasource.driver}
