--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,5 +5,5 @@ spring:
   datasource:
       url: ${spring.datasource.url}
       username: ${spring.datasource.username}
-      password: ${spring.datasource.password}
+      password: ${spring.datasource.pw}
       driver: ${spring.datasource.driver}
