배포외않되

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+	<distributionManagement>
+		<repository>
+			<id>Tripfy</id>
+			<url>https://github.com/synodical/Tripfy.git</url>
+		</repository>
+	</distributionManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
