--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>2.7.11</version>
 		</dependency>
+		<!--mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.7.11</version>
+		</dependency>
 
 	</dependencies>
 
