[FEAT] 내부구조 수정, 모든 코스 검색, 코스별 세부내역 조회 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
           starttls:
             enable: true
 
-
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
