--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8081
+
 spring:
   profiles:
     active: prod
@@ -22,3 +25,9 @@ spring:
 
 mybatis:
   mapper-locations: classpath:mapper/**/*.xml
+
+oauth:
+  kakao:
+    client_key: ${KAKAO_CLIENT_KEY}
+    redirect: 'http://localhost:3000/oauth/kakao/callback'
+    admin_key: ${KAKAO_ADMIN_KEY}
